--- a/src/App/Bundle/SiteBundle/Resources/config/override.yml
+++ b/src/App/Bundle/SiteBundle/Resources/config/override.yml
@@ -9,3 +9,8 @@ system:
                     template: "AppSiteBundle:content/full:homepage.html.twig"
                     match:
                         Identifier\ContentType: [homepage]
+                gallery:
+                    controller: "AppSiteBundle:Gallery:index"
+                    template: "AppSiteBundle:content/full:gallery.html.twig"
+                    match:
+                        Identifier\ContentType: [gallery_container]
