--- a/app/config/ezplatform_prod.yml
+++ b/app/config/ezplatform_prod.yml
@@ -16,14 +16,14 @@ ezpublish:
                         Map\URI:
                             fr: true
                         Map\Host:
-                            benjamindespas.com: true
+                            jamdespas.com: true
                     match: benjamindespas
                 benjamindespas_en:
                     matchers:
                         Map\URI:
                             en: true
                         Map\Host:
-                            benjamindespas.com: true
+                            jamdespas.com: true
                     match: benjamindespas_en
             Map\Host:
-                benjamindespas.com: benjamindespas
+                jamdespas.com: benjamindespas
